--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -20,7 +20,7 @@
                   <a class="nav-link active" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Link</a>
