--- a/reservation/templates/signup.html
+++ b/reservation/templates/signup.html
@@ -3,8 +3,9 @@
 {% block content %}
     
 <h1>Sign Up</h1>
-    <form action="" method="post">
-        {{form}}
+<form action="" method="post">
+        {% csrf_token %}
+        {{form.as_p}}
         <input type="submit" value="signup">
     </form>
   
