--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link disabled" href="#">Disabled</a>
@@ -34,7 +34,7 @@
       <body>
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-{{message.tags}}" role="alert">
         {{ message }}
         </div>
         {% endfor %}
