--- a/reservation/templates/login.html
+++ b/reservation/templates/login.html
@@ -25,9 +25,12 @@
    
 </style>
 
+{% load static %}
+
 <div class="container">
+    <img style="height: 19rem; width: 19rem; justify-content: center; margin-right: 1.5rem; margin-bottom: -2rem;"src="{% static '/images/log-3.png' %}" alt="">
     <form action="" method="post">
-            <h2>LOGIN</h2>
+            <!-- <h2>LOGIN</h2> -->
             {% csrf_token %}
             <div class="form-group">
                 <label for="">Username</label>
