--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -32,11 +32,11 @@
         </div>
       </nav>
       <body>
-        {% if messages %}
+        {% if messages in 'login'%}
         {% for message in messages %}
         <div class="alert alert-{{message.tags}}" role="alert">
         {{ message }}
-        </div>
+        </div>  
         {% endfor %}
 {% endif %}
         
