--- a/reservation/templates/signup.html
+++ b/reservation/templates/signup.html
@@ -17,6 +17,13 @@
     }
 </style>
 
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>  
+    {% endfor %}
+{% endif %}
 
 <div class="container">    
     <h1>Sign Up</h1>
