images added background has changed

--- a/reservation/templates/login.html
+++ b/reservation/templates/login.html
@@ -30,7 +30,7 @@
 
 
 <div class="container">
-    <img style="height: 19rem; width: 19rem; justify-content: center; margin-right: 1.5rem; margin-bottom: -2rem;"src="{% static '/images/log-3.png' %}" alt="">
+    <img style="height: 19rem; width: 19rem; justify-content: center; margin-right: 1.5rem; margin-bottom: -2rem;"src="{% static '/images/Background.png' %}" alt="">
     <form action="" method="post">
             <!-- <h2>LOGIN</h2> -->
             {% csrf_token %}
