--- a/reservation/templates/login.html
+++ b/reservation/templates/login.html
@@ -20,6 +20,7 @@
         align-items: center;
         flex-direction:column;
         min-height: 65vh;
+        margin-top: 4vh;
     }
 
    
@@ -30,7 +31,7 @@
 
 
 <div class="container">
-    <img style="height: 19rem; width: 19rem; justify-content: center; margin-right: 1.5rem; margin-bottom: -2rem;"src="{% static '/images/Background.png' %}" alt="">
+    <img style="height: 12rem; width: 20rem; justify-content: center; margin: 2rem 1.2rem 2rem 0rem;"src="{% static '/images/login.png' %}" alt="">
     <form action="" method="post">
             <!-- <h2>LOGIN</h2> -->
             {% csrf_token %}
