--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                  <a class="nav-link active" href="{% url 'index' %}">Home</a>
+                  <a class="nav-link active" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
