--- a/reservation/templates/home.html
+++ b/reservation/templates/home.html
@@ -2,7 +2,42 @@
 
 
 {% block content %}
+<!-- <center><h1>HOME PAGE</h1></center>  -->
 
-   <center><h1>HOME PAGE</h1></center> 
+<div class="container">
+   <div class="intro">
+      <h2>Welcome</h2>
+      <h2>to the</h2>
+      <h2 style="color:blue">ESKIS</h2>
+   </div>
+   <div class="recipe">
+      <img src="/static/images/Rectangle 50.png" alt="" srcset="">
+      <img src="/static/images/Rectangle 51.png" alt="" srcset="">
+      <img src="/static/images/Rectangle 52.png" alt="" srcset="">
+      <img src="/static/images/Rectangle 53.png" alt="" srcset="">
+      <img src="/static/images/Rectangle 54.png" alt="" srcset="">
+      <img src="/static/images/Rectangle 56.png" alt="" srcset="">
+   </div>
+</div>
 
+
+
+<style>
+   .container{
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      min-height: 70vh;
+      border: 4px solid red;
+      min-width: 100%;
+      margin-top: 2rem;
+   }
+   .recipe{
+      display: grid;
+      grid-template-columns: 2fr 2fr;
+      border: 4px solid yellow;
+   }
+
+
+</style>
 {% endblock content %}
