--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -23,6 +23,11 @@
               <li class="nav-item">
                 <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'home' %}">Home</a>
               </li>
+              {% if request.user.username %}
+              <li class="nav-item">
+                <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'rservation' %}">Reservations</a>
+              </li>
+            {% endif %}
               <li class="nav-item">
                 <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'signup' %}">Sign Up</a>
               </li>
