navbar updated if conditions added in index.html

--- a/reservation/templates/login.html
+++ b/reservation/templates/login.html
@@ -31,7 +31,8 @@
 
 
 <div class="container">
-    <img style="height: 12rem; width: 20rem; justify-content: center; margin: 2rem 1.2rem 2rem 0rem;"src="{% static '/images/login.png' %}" alt="">
+    <img style="height: 12rem; width: 20rem; justify-content: center; margin: 2rem 1.2rem 2rem 0rem;"src="{% static '/images/login2.png' %}" alt="">
+
     <form action="" method="post">
             <!-- <h2>LOGIN</h2> -->
             {% csrf_token %}
