--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -25,22 +25,30 @@
               </li>
               {% if request.user.username %}
               <li class="nav-item">
-                <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'rservation' %}">Reservations</a>
+                <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'reservation' %}">Reservations</a>
               </li>
             {% endif %}
+            {% if not request.user.username %}
+          
               <li class="nav-item">
                 <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'signup' %}">Sign Up</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'login' %}">Login</a>
               </li>
+              {% endif %}
+              {% if request.user.username %}
+              <li class="nav-item">
+                <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'logout' %}">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'home' %}">Hello {{request.user.username}}</a>
+              </li>   
+               {% endif %}
+          
             </ul>
           </div>
-          {% if request.user.username %}
-          
-          <span style="font-size:1rem; padding-right: 2rem;">Hello {{request.user.username}}</span>
-          <span><a class="nav-link alert-info" style="margin:0.5rem; border-radius:70px" href="{% url 'logout' %}">Logout</a></span>
-          {% endif %}
+      
           
         </nav>
         
