--- a/reservation/templates/reservation.html
+++ b/reservation/templates/reservation.html
@@ -15,19 +15,20 @@
         min-height: 65vh;
         margin-top: 4vh;
     }
+
 </style>
    
 
 
 
 <div class="container">
-    <img style="height: 12rem; width: 20rem; justify-content: center; margin: 2rem 1.2rem 2rem 0rem;"src="{% static '/images/login.png' %}" alt="">
+    <img style="height: 12rem; width: 15rem; justify-content: center; margin: 2rem 1.2rem 2rem 0rem" src="/static/images/Rectangle 50.png" alt="" srcset="">
     <form action="" method="post">
             <!-- <h2>LOGIN</h2> -->
             {% csrf_token %}
             <div class="form-group">
                 <label for="">Guest Size</label>
-                <input type="number" class="form-control" id="username" name="username" placeholder="Username">
+                <input type="number" class="form-control" id="username" name="username" placeholder="Guest Size">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Date</label>
