--- a/reservation/templates/reservation.html
+++ b/reservation/templates/reservation.html
@@ -17,26 +17,35 @@
     }
 
 </style>
-   
 
 
 
-<div class="container">
+
+{% load crispy_forms_tags %}
+
+
+
+<style>
+    .container{
+        border: red;
+        display:flex;
+        padding-top: 3rem;
+        justify-content: center;
+        align-items: center;
+        flex-direction:column;
+    }
+    </style>
+
+
+<div class="container">    
     <img style="height: 12rem; width: 15rem; justify-content: center; margin: 2rem 1.2rem 2rem 0rem" src="/static/images/Rectangle 50.png" alt="" srcset="">
+    <h1>Make Reservation</h1>
     <form action="" method="post">
-            <!-- <h2>LOGIN</h2> -->
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="">Guest Size</label>
-                <input type="number" class="form-control" id="username" name="username" placeholder="Guest Size">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Date</label>
-                <input type="date" class="form-control" id="password" name="password" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        {% csrf_token %}
+        
+        {{ reservation_form|crispy }}
+        
+        <input class="btn btn-primary" type="submit" value="Submit">
+    </form>
 </div>
-
-
 {% endblock content %}
