--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -15,8 +15,8 @@
 
       <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
           
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <button style="background-image: url('https://mdbcdn.b-cdn.net/img/svg/hamburger2.svg?color=fff'); background-size: contain; background-repeat:none; " class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span" class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav justify-content-center">
