--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -19,7 +19,7 @@
             <span" class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav justify-content-center">
+            <ul style="margin-left:1.2rem;" class="nav justify-content-center">
               <li class="nav-item">
                 <a class="nav-link alert-info" style="font-weight: bold;margin:0.5rem; border-radius:70px" href="{% url 'home' %}">Home</a>
               </li>
@@ -38,14 +38,14 @@
               </li>
               {% endif %}
               {% if request.user.username %}
-              <li class="nav-item">
-                <a class="nav-link alert-info" style="font-weight: bold;margin:0.5rem; border-radius:70px" href="{% url 'logout' %}">Logout</a>
-              </li>
-              <li class="nav-item">
+              <li  class="nav-item">
                 <a class="nav-link alert-info" style="font-weight: bold; margin:0.5rem; border-radius:70px" href="{% url 'home' %}">{{request.user.username}}</a>
               </li>   
-               {% endif %}
-          
+              <li style="margin-left: 63vw" class="nav-item">
+                <a class="nav-link alert-info" style="font-weight: bold;margin:0.5rem; border-radius:70px" href="{% url 'logout' %}">Logout</a>
+              </li>
+              {% endif %}
+              
             </ul>
           </div>
       
