changes made in models.py and index.html

--- a/reservation/templates/index.html
+++ b/reservation/templates/index.html
@@ -41,7 +41,7 @@
               <li  class="nav-item">
                 <a class="nav-link alert-info" style="font-weight: bold; margin:0.5rem; border-radius:70px" href="{% url 'home' %}">{{request.user.username}}</a>
               </li>   
-              <li style="margin-left: 63vw" class="nav-item">
+              <li class="nav-item">
                 <a class="nav-link alert-info" style="font-weight: bold;margin:0.5rem; border-radius:70px" href="{% url 'logout' %}">Logout</a>
               </li>
               {% endif %}
